--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div id="drag-container">
   <div id="spin-container">
 
-    <img src="./img/n1.jpg" alt="">
-    <img src="./img/n2.jpg" alt="">
-    <img src="./img/n3.jpg" alt="">
-    <img src="./img/n4.jpg" alt="">
-    <img src="./img/n5.jpg" alt="">
-    <img src="./img/n6.jpg" alt="">
+    <img src="./img/a1.jpg" alt="">
+    <img src="./img/a2.jpg" alt="">
+    <img src="./img/a3.jpg" alt="">
+    <img src="./img/a4.jpg" alt="">
+    <img src="./img/a5.jpg" alt="">
+    <img src="./img/a6.jpg" alt="">
     
 
   
